Dark mode and light mode user CSS fixed .

--- a/new-invoice-frontend/main/src/assets/scss/apps/_contactgrid.scss
+++ b/new-invoice-frontend/main/src/assets/scss/apps/_contactgrid.scss
@@ -23,7 +23,7 @@
   padding-top: 10px;
 }
 
-.user-img {
+.user-img1 {
   // padding: 3px;
   border-radius: 50px;
   max-width: 112px;
@@ -31,6 +31,16 @@
   box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3);
   margin-bottom: 20px;
 }
+
+.user-img {
+  // padding: 3px;
+  border-radius: 10px;
+  max-width: 112px;
+  margin-top: -50px;
+  box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3);
+  margin-bottom: 20px;
+}
+
 
 .profile-userbuttons {
   text-align: center;
